[gd_scene load_steps=9 format=3 uid="uid://ngta1o5yiqxs"]

[ext_resource type="Script" uid="uid://dvpyywoct4riy" path="res://Scripts/UI/control.gd" id="1_1r6xj"]
[ext_resource type="Script" uid="uid://bpegrg5a15v2v" path="res://Scripts/UI/UIInput.gd" id="3_1eur5"]
[ext_resource type="PackedScene" uid="uid://cpcj4o080w37m" path="res://UI/EditorUI/LeftUI/left_panel.tscn" id="5_0cvxm"]
[ext_resource type="PackedScene" uid="uid://duk3smjtw111j" path="res://UI/EditorUI/RightUI/Components/wiggle.tscn" id="6_63lps"]
[ext_resource type="PackedScene" uid="uid://nh83ldjgbynt" path="res://UI/EditorUI/RightUI/Components/misc.tscn" id="8_4jud0"]
[ext_resource type="PackedScene" uid="uid://c3f86pv0can01" path="res://UI/EditorUI/RightUI/Components/properties.tscn" id="8_i4djb"]
[ext_resource type="PackedScene" uid="uid://ccvo3k5t6lis6" path="res://UI/EditorUI/RightUI/Components/movement.tscn" id="9_fwbkq"]
[ext_resource type="PackedScene" uid="uid://bk2xbsvlmq0or" path="res://UI/StateButton/state_panel.tscn" id="10_1r6xj"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_1r6xj")

[node name="UIInput" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_1eur5")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
split_offset = -2000

[node name="LeftPanel" parent="HSplitContainer" instance=ExtResource("5_0cvxm")]
unique_name_in_owner = true
layout_mode = 2

[node name="HSplit" type="HSplitContainer" parent="HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
split_offset = 2500

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="HSplitContainer/HSplit"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="RightPanel" type="Panel" parent="HSplitContainer/HSplit"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="Properties" type="VBoxContainer" parent="HSplitContainer/HSplit/RightPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0157895
anchor_top = 0.0158501
anchor_right = 0.984211
anchor_bottom = 0.989914
offset_right = -0.000183105
offset_bottom = -0.0522461
metadata/_edit_use_anchors_ = true

[node name="Name" type="LineEdit" parent="HSplitContainer/HSplit/RightPanel/Properties"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
placeholder_text = "Name"
alignment = 1

[node name="VSplitContainer" type="VSplitContainer" parent="HSplitContainer/HSplit/RightPanel/Properties"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="TabContainer" parent="HSplitContainer/HSplit/RightPanel/Properties/VSplitContainer"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(350, 513)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/side_margin = 1
current_tab = 0

[node name="Properties" parent="HSplitContainer/HSplit/RightPanel/Properties/VSplitContainer/ScrollContainer" instance=ExtResource("8_i4djb")]
layout_mode = 2

[node name="Movement" parent="HSplitContainer/HSplit/RightPanel/Properties/VSplitContainer/ScrollContainer" instance=ExtResource("9_fwbkq")]
visible = false
layout_mode = 2

[node name="Wiggle" parent="HSplitContainer/HSplit/RightPanel/Properties/VSplitContainer/ScrollContainer" instance=ExtResource("6_63lps")]
layout_mode = 2

[node name="Misc" parent="HSplitContainer/HSplit/RightPanel/Properties/VSplitContainer/ScrollContainer" instance=ExtResource("8_4jud0")]
visible = false
layout_mode = 2

[node name="Experimental" type="Control" parent="HSplitContainer/HSplit/RightPanel/Properties/VSplitContainer/ScrollContainer"]
visible = false
y_sort_enabled = true
layout_mode = 2
metadata/_tab_index = 4

[node name="ScrollContainer6" type="ScrollContainer" parent="HSplitContainer/HSplit/RightPanel/Properties/VSplitContainer/ScrollContainer/Experimental"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.014
anchor_top = 0.011
anchor_right = 1.014
anchor_bottom = 1.0
offset_left = 6.152
offset_top = 0.698
offset_right = -7.15201
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/HSplit/RightPanel/Properties/VSplitContainer/ScrollContainer/Experimental/ScrollContainer6"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/HSplit/RightPanel/Properties/VSplitContainer/ScrollContainer/Experimental/ScrollContainer6/MarginContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 6

[node name="HBox22" type="HBoxContainer" parent="HSplitContainer/HSplit/RightPanel/Properties/VSplitContainer/ScrollContainer/Experimental/ScrollContainer6/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AdvancedLipSync" type="CheckBox" parent="HSplitContainer/HSplit/RightPanel/Properties/VSplitContainer/ScrollContainer/Experimental/ScrollContainer6/MarginContainer/VBoxContainer/HBox22"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 16
text = "Advanced Lipsync"

[node name="AdvancedLipSyncLabel" type="Label" parent="HSplitContainer/HSplit/RightPanel/Properties/VSplitContainer/ScrollContainer/Experimental/ScrollContainer6/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(340, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_font_sizes/font_size = 14
text = "Only works if your mouth shapes are in a sprite-sheet. 14 frames
(Check the Lipsync configuration)"
autowrap_mode = 3
justification_flags = 169
max_lines_visible = 3
visible_characters_behavior = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/HSplit/RightPanel/Properties/VSplitContainer/ScrollContainer/Experimental/ScrollContainer6/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="HSplitContainer/HSplit/RightPanel/Properties/VSplitContainer/ScrollContainer/Experimental/ScrollContainer6/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxPhysics2" type="HBoxContainer" parent="HSplitContainer/HSplit/RightPanel/Properties/VSplitContainer/ScrollContainer/Experimental/ScrollContainer6/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="HBox3" type="HBoxContainer" parent="HSplitContainer/HSplit/RightPanel/Properties/VSplitContainer/ScrollContainer/Experimental/ScrollContainer6/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -10

[node name="NonAnimatedSheetCheck" type="CheckBox" parent="HSplitContainer/HSplit/RightPanel/Properties/VSplitContainer/ScrollContainer/Experimental/ScrollContainer6/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Turns a SpriteSheet into Static Frames that you can choose from."
theme_override_font_sizes/font_size = 16
text = "None Animated Sheet"

[node name="FrameHBox" type="HBoxContainer" parent="HSplitContainer/HSplit/RightPanel/Properties/VSplitContainer/ScrollContainer/Experimental/ScrollContainer6/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="FrameLabel" type="Label" parent="HSplitContainer/HSplit/RightPanel/Properties/VSplitContainer/ScrollContainer/Experimental/ScrollContainer6/MarginContainer/VBoxContainer/FrameHBox"]
layout_mode = 2
text = "Frame : "

[node name="FrameSpinbox" type="SpinBox" parent="HSplitContainer/HSplit/RightPanel/Properties/VSplitContainer/ScrollContainer/Experimental/ScrollContainer6/MarginContainer/VBoxContainer/FrameHBox"]
unique_name_in_owner = true
layout_mode = 2
max_value = 12.0

[node name="StatePanel" parent="HSplitContainer/HSplit/RightPanel/Properties/VSplitContainer" instance=ExtResource("10_1r6xj")]
layout_mode = 2

[connection signal="focus_entered" from="HSplitContainer/HSplit/RightPanel/Properties/Name" to="UIInput" method="_on_name_focus_entered"]
[connection signal="focus_exited" from="HSplitContainer/HSplit/RightPanel/Properties/Name" to="UIInput" method="_on_name_focus_exited"]
[connection signal="text_submitted" from="HSplitContainer/HSplit/RightPanel/Properties/Name" to="UIInput" method="_on_name_text_submitted"]
[connection signal="mouse_entered" from="HSplitContainer/HSplit/RightPanel/Properties/VSplitContainer/ScrollContainer/Experimental/ScrollContainer6/MarginContainer/VBoxContainer/HBox22/AdvancedLipSync" to="UIInput" method="_on_advanced_lip_sync_mouse_entered"]
[connection signal="mouse_exited" from="HSplitContainer/HSplit/RightPanel/Properties/VSplitContainer/ScrollContainer/Experimental/ScrollContainer6/MarginContainer/VBoxContainer/HBox22/AdvancedLipSync" to="UIInput" method="_on_advanced_lip_sync_mouse_exited"]
[connection signal="toggled" from="HSplitContainer/HSplit/RightPanel/Properties/VSplitContainer/ScrollContainer/Experimental/ScrollContainer6/MarginContainer/VBoxContainer/HBox22/AdvancedLipSync" to="UIInput" method="_on_advanced_lip_sync_toggled"]
[connection signal="toggled" from="HSplitContainer/HSplit/RightPanel/Properties/VSplitContainer/ScrollContainer/Experimental/ScrollContainer6/MarginContainer/VBoxContainer/NonAnimatedSheetCheck" to="UIInput" method="_on_non_animated_sheet_check_toggled"]
[connection signal="value_changed" from="HSplitContainer/HSplit/RightPanel/Properties/VSplitContainer/ScrollContainer/Experimental/ScrollContainer6/MarginContainer/VBoxContainer/FrameHBox/FrameSpinbox" to="UIInput" method="_on_frame_spinbox_value_changed"]
